# reddit-trace

./: .gitignore  AGENTS.md  CLAUDE.md  HN-PLAN.md  PLAN.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 949220c7deae_add_source_platform_schema.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
backend/app/api/: __init__.py  analyses_api.py  analysis.py  crawler.py  crawler_api.py  dashboard.py  dashboard_api.py  posts.py  posts_api.py  sources_api.py  subreddits.py  subreddits_api.py  tags.py  tags_api.py
backend/app/llm/: __init__.py  base.py  claude.py  openai.py
backend/app/models/: __init__.py  analyses.py  associations.py  comment.py  payloads.py  post.py  posts.py  source_comments.py  source_item_tag_associations.py  source_items.py  source_payloads.py  source_targets.py  subreddits.py  tag.py  tags.py
backend/app/schemas/: __init__.py  analyses_schemas.py  analysis.py  comment.py  comments_schemas.py  post.py  posts_schemas.py  sources_schemas.py  subreddits_schemas.py  tags_schemas.py
backend/app/services/: __init__.py  analysis_service.py  analyzer.py  crawler.py  ingest.py  reddit_crawler_service.py  reddit_ingestion_service.py  scheduler.py  scheduler_service.py  source_fetch_service.py  source_ingestion_service.py  source_registry_service.py
backend/app/services/sources/: __init__.py  base.py  hackernews.py  reddit.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  (+1 more)
(+28 files in other folders)
