[project]
name = "reddit-trace"
version = "0.1.0"
description = "Reddit用户需求挖掘系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
]
